[package]
name = "crucible-osv"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Crucible block device driver for OSv"

[lib]
crate-type = ["staticlib"]

[dependencies]
osv-sys = { path = "../osv-sys" }

[features]
default = ["kernel"]
kernel = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
